
add_subdirectory( control )
add_subdirectory( date )
add_subdirectory( log )
add_subdirectory( noautorejoin )
add_subdirectory( nogarbage )
add_subdirectory( oidentd )
add_subdirectory( op )
add_subdirectory( peak )
add_subdirectory( peak2 )
add_subdirectory( plog )
add_subdirectory( raw )
add_subdirectory( repeat )
add_subdirectory( spam )
add_subdirectory( subop )
add_subdirectory( uptime )
add_subdirectory( vctrl )
add_subdirectory( words )
